--- a/_layouts/courses.html
+++ b/_layouts/courses.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<!-- _layouts/lecture.html -->
+<!-- _layouts/courses.html -->
 
 <div class="post">
 
@@ -12,7 +12,7 @@ layout: default
 
   <article>
     <div class="cv">
-      {% for entry in site.data.lectures %}
+      {% for entry in site.data.courses %}
         <a class="anchor" id="{{ entry.title }}"></a>
         <div class="card mt-3 p-3">
           <h3 class="card-title font-weight-medium">{{ entry.title }}</h3>
